# bellwright-companion

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  docker.yml  release.yml
data/: attributes.json  traits.json
docs/: save-format.md
parser/: package.json
parser/src/: cli.ts  fields.ts  gearpresets.ts  gearsets.ts  groups.ts  housing.ts  npcs.ts  payload.ts  player.ts  pois.ts  storage.ts  types.ts  villages.ts  wire.ts
publisher/: package.json
publisher/scripts/: build-sea.mjs
publisher/src/: publisher.ts
publisher/systemd/: bellwright-publisher.service
tools/: portrait-cropper.py
tools/dump/: Cargo.toml
tools/exploration/: README.md  extract_npcs.py  pbdig.py  pbwalk.py
tools/pakdump/: Program.cs  pakdump.csproj
web/: .env.example  drizzle.config.ts  kits.example.json  next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx  world-page.tsx
web/app/[tab]/: page.tsx
web/components/bw/: app.tsx  avatar.tsx  compare.tsx  drawer.tsx  events-tab.tsx  gear.tsx  icons.tsx  injury-badge.tsx  insights.tsx  item-img.tsx  map-tab.tsx  me.tsx  raid-alert.tsx  roster.tsx  storage-tab.tsx  trends.tsx  ui.ts  upload-modal.tsx  use-realtime.ts  use-tooltips.ts
web/components/ui/: badge.tsx  card.tsx  chart.tsx  dropdown-menu.tsx  input.tsx  table.tsx  (+1 more)
web/db/: index.ts  schema.ts
web/drizzle/: 0000_init.sql  0001_events.sql
web/lib/: types.ts
web/scripts/: fetch-icons.ts  fetch-map.ts
(+21 files in other folders)
